fixed gram and spacing in index added meta descriptions, alt tags

--- a/css/audit.css
+++ b/css/audit.css
@@ -1,10 +1,10 @@
-.cls-1{opacity:0.4;}
+.cls-1{opacity:0.6;}
 .cls-2,.cls-4{fill:#ffff00;}
 .cls-2,
 .cls-3{opacity:0.45;}
 .cls-3,
 .cls-5{fill: #ffff00;}
-.cls-4{opacity:0.3;}
+.cls-4{opacity:0.45;}
 .cls-5{opacity:0.5;}
 
 
