--- a/css/deploy.css
+++ b/css/deploy.css
@@ -1,10 +1,10 @@
-.cls-1{opacity:0.4;}
+.cls-1{opacity:0.6;}
 .cls-2,.cls-4{fill:#ff00ff;}
 .cls-2,
 .cls-3{opacity:0.45;}
 .cls-3,
 .cls-5{fill: #ff00ff;}
-.cls-4{opacity:0.3;}
+.cls-4{opacity:0.45;}
 .cls-5{opacity:0.5;}
 
 .rect{
@@ -38,6 +38,12 @@
 
 }
 
+.codebox:hover {
+  border: hsla(300, 100%, 50%, .8) 2px solid;
+  animation-name: fadeborder;
+  animation-duration: .8s;
+  animation-fill-mode: forwards;
+}
 @keyframes fadeborder {
   0% {border: hsla(300, 100%, 50%, 0) 2px solid;}
   50% {border: hsla(300, 100%, 50%, .45) 2px solid;}
